# bq-handy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt
src/handy/: CMakeLists.txt  bqmath.hpp  config.hpp  cyclicbuff.hpp  math.cpp  math.hpp  objectpool.hpp  vector.hpp
test/: CMakeLists.txt  main.cpp  math.cpp  vector.cpp
